// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<React.Fragment>
  <Checkbox
    checked={false}
    disabled={false}
    onCheck={[Function]}
    thirdState={false}
  >
    <img
      alt="Foo Provider"
      className="spacer-left"
      height={14}
      src="/images/sonarcloud/foo.svg"
      style={
        Object {
          "opacity": 1,
        }
      }
      width={14}
    />
    <span
      className="spacer-left"
    >
      Awesome Project
    </span>
  </Checkbox>
</React.Fragment>
`;

exports[`should render disabled 1`] = `
<React.Fragment>
  <Checkbox
    checked={true}
    disabled={true}
    onCheck={[Function]}
    thirdState={false}
  >
    <img
      alt="Foo Provider"
      className="spacer-left"
      height={14}
      src="/images/sonarcloud/foo.svg"
      style={
        Object {
          "opacity": 0.5,
        }
      }
      width={14}
    />
    <span
      className="spacer-left"
    >
      Cool Project
    </span>
  </Checkbox>
  <span
    className="big-spacer-left"
  >
    <CheckIcon
      className="little-spacer-right"
      fill="#00aa00"
    />
    <Link
      onlyActiveOnIndex={false}
      style={Object {}}
      to={
        Object {
          "pathname": "/dashboard",
          "query": Object {
            "branch": undefined,
            "id": "proj_cool",
          },
        }
      }
    >
      onboarding.create_project.already_imported
    </Link>
  </span>
</React.Fragment>
`;

exports[`should render selected 1`] = `
<React.Fragment>
  <Checkbox
    checked={true}
    disabled={false}
    onCheck={[Function]}
    thirdState={false}
  >
    <img
      alt="Foo Provider"
      className="spacer-left"
      height={14}
      src="/images/sonarcloud/foo.svg"
      style={
        Object {
          "opacity": 1,
        }
      }
      width={14}
    />
    <span
      className="spacer-left"
    >
      Awesome Project
    </span>
  </Checkbox>
</React.Fragment>
`;
